--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
-DB_PORT=
+DATABSE_NAME= 
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_HOST=
+DATABASE_PORT=
 
 JWT_AUTHORIZATION_HEADER_PREFIX=Bearer
 JWT_AUTHORIZATION_HEADER_KEY=Authorization
