--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==3.0.3
 django-extensions==3.1.1
 django-ninja==0.11.0
 djangorestframework==3.12.2
+psycopg2==2.8.6
 pydantic==1.7.3
 PyJWT==2.0.1
 python-decouple==3.4
